--- a/website.html
+++ b/website.html
@@ -2,76 +2,148 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portfolio | 원다영</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>원다영 포트폴리오</title>
   <style>
     /* 기본 리셋 */
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; color: #2b2b2b; line-height: 1.6; }
-    a { color: inherit; text-decoration: none; }
-    img { max-width: 100%; height: auto; display: block; }
+    body { font-family: 'Noto Sans KR', sans-serif; color: #333; line-height: 1.6; }
+    a { text-decoration: none; color: inherit; }
+    img { max-width: 100%; display: block; }
 
-    /* 헤더 */
-    header { background: #fff; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    /* Header */
+    header { background: #fff; position: fixed; top: 0; width: 100%; z-index: 100;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     .container { width: 90%; max-width: 1200px; margin: 0 auto; }
-    .header-inner { display: flex; align-items: center; justify-content: space-between; padding: 1rem 0; }
+    nav { display: flex; justify-content: space-between; align-items: center; height: 60px; }
     .logo { font-size: 1.5rem; font-weight: bold; }
-    nav ul { display: flex; gap: 1.5rem; }
+    .nav-links { list-style: none; display: flex; gap: 1.5rem; }
+    .nav-links li a { font-size: 0.95rem; }
 
-    /* 메인 배너 */
-    .hero { position: relative; margin-bottom: 2rem; }
-    .hero img { width: 100%; height: 400px; object-fit: cover; border-radius: 0.5rem; }
+    /* Hero 섹션 */
+    .hero { margin-top: 60px; height: 80vh; background: url('hero.jpg') center/cover no-repeat;
+      display: flex; align-items: center; justify-content: center; color: #fff;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.4); }
+    .hero h1 { font-size: 3rem; }
 
-    /* 프로젝트 그리드 */
-    .projects { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 1.5rem; }
-    .project-item { background: #fff; border-radius: 0.5rem; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.05); }
-    .project-info { padding: 1rem; }
-    .project-info h3 { font-size: 1.25rem; margin-bottom: 0.5rem; }
-    .project-info p { font-size: 0.875rem; color: #555; }
+    /* About 섹션 */
+    .about { padding: 4rem 0; background: #f9f9f9; }
+    .about .inner { display: flex; flex-wrap: wrap; align-items: center; gap: 2rem; }
+    .about-text { flex: 1; min-width: 280px; }
+    .about-photo { flex: 1; min-width: 280px; }
+    .about-photo img { border-radius: 50%; }
 
-    /* 푸터 */
-    footer { background: #f7f7f7; padding: 2rem 0; margin-top: 3rem; }
-    .footer-inner { display: flex; flex-direction: column; align-items: center; gap: 1rem; }
+    /* Skills 섹션 */
+    .skills { padding: 4rem 0; }
+    .skills h2 { text-align: center; margin-bottom: 2rem; }
+    .skills-list { display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; }
+    .skills-list li { background: #e0e0e0; padding: 0.5rem 1rem; border-radius: 2rem; font-size: 0.9rem; }
+
+    /* Projects 섹션 */
+    .projects { padding: 4rem 0; background: #f9f9f9; }
+    .projects h2 { text-align: center; margin-bottom: 2rem; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; }
+    .card { background: #fff; border-radius: 0.5rem; overflow: hidden; box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s; }
+    .card:hover { transform: translateY(-5px); }
+    .card img { width: 100%; height: 180px; object-fit: cover; }
+    .card-content { padding: 1rem; }
+    .card-content h3 { margin-bottom: 0.5rem; font-size: 1.2rem; }
+    .card-content p { font-size: 0.9rem; }
+    .card-content a { display: inline-block; margin-top: 0.5rem; font-size: 0.9rem; color: #007bff; }
+
+    /* Contact 섹션 */
+    .contact { padding: 4rem 0; }
+    .contact h2 { text-align: center; margin-bottom: 2rem; }
+    .contact-form { width: 100%; max-width: 500px; margin: 0 auto; }
+    .contact-form input, .contact-form textarea { width: 100%; padding: 0.75rem; margin-bottom: 1rem;
+      border: 1px solid #ccc; border-radius: 0.25rem; }
+    .contact-form button { width: 100%; padding: 0.75rem; border: none; background: #253551;
+      color: #fff; font-size: 1rem; border-radius: 0.25rem; cursor: pointer; }
+
+    /* Footer */
+    footer { background: #333; color: #fff; padding: 2rem 0; text-align: center; }
+    footer small { display: block; margin-top: 1rem; font-size: 0.8rem; }
   </style>
 </head>
 <body>
   <header>
-    <div class="container header-inner">
-      <div class="logo">원다영 포트폴리오</div>
+    <div class="container">
       <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+        <div class="logo">Your Name</div>
+        <ul class="nav-links">
+          <li><a href="#about">소개</a></li>
+          <li><a href="#skills">기술</a></li>
+          <li><a href="#projects">프로젝트</a></li>
+          <li><a href="#contact">연락</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <section id="home" class="hero container">
-    <img src="https://via.placeholder.com/1200x400" alt="메인 배너">
+  <section class="hero">
+    <h1>Hello, I'm Your Name</h1>
   </section>
 
-  <section id="projects" class="container">
-    <h2>프로젝트</h2>
-    <div class="projects">
-      <!-- 반복: 각 프로젝트 항목 시작 -->
-      <div class="project-item">
-        <img src="https://via.placeholder.com/400x250" alt="프로젝트 제목">
-        <div class="project-info">
-          <h3>프로젝트 제목</h3>
-          <p>간략한 설명이 들어갑니다.</p>
-        </div>
+  <section id="about" class="about">
+    <div class="container inner">
+      <div class="about-text">
+        <h2>소개</h2>
+        <p>여기에 간단한 자기소개글을 작성하세요. 경력, 관심사, 목표 등을 간결하게 소개합니다.</p>
       </div>
-      <!-- 반복: 프로젝트 항목 끝 -->
+      <div class="about-photo">
+        <img src="profile.jpg" alt="프로필 사진">
+      </div>
+    </div>
+  </section>
+
+  <section id="skills" class="skills">
+    <div class="container">
+      <h2>기술 스택</h2>
+      <ul class="skills-list">
+        <li>HTML/CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Python</li>
+        <li>Git</li>
+        <!-- 필요시 추가 -->
+      </ul>
+    </div>
+  </section>
+
+  <section id="projects" class="projects">
+    <div class="container">
+      <h2>프로젝트</h2>
+      <div class="grid">
+        <div class="card">
+          <img src="project1.jpg" alt="프로젝트 1">
+          <div class="card-content">
+            <h3>프로젝트 제목 1</h3>
+            <p>프로젝트 설명을 간략히 작성합니다.</p>
+            <a href="#">자세히 보기</a>
+          </div>
+        </div>
+        <!-- 카드 복제하여 추가 -->
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="contact">
+    <div class="container">
+      <h2>연락하기</h2>
+      <form class="contact-form" action="#" method="post">
+        <input type="text" name="name" placeholder="이름" required>
+        <input type="email" name="email" placeholder="이메일" required>
+        <textarea name="message" rows="5" placeholder="메시지" required></textarea>
+        <button type="submit">전송하기</button>
+      </form>
     </div>
   </section>
 
   <footer>
-    <div class="container footer-inner">
-      <p>© 2025 원다영. All rights reserved.</p>
-      <p><a href="#contact">Contact Me</a></p>
+    <div class="container">
+      &copy; 2025 Your Name. All Rights Reserved.
+      <small>Built with ❤️</small>
     </div>
   </footer>
 </body>
