--- a/website.html
+++ b/website.html
@@ -7,7 +7,7 @@
   <style>
     /* 기본 리셋 */
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Noto Sans KR', sans-serif; color: #333; line-height: 1.6; }
+    body { font-family: 'Noto Sans KR', sans-serif; color: #333; line-height: 1.6; scroll-behavior: smooth; }
     a { text-decoration: none; color: inherit; }
     img { max-width: 100%; display: block; }
 
@@ -22,24 +22,21 @@
 
     /* Hero 섹션 */
     .hero { margin-top: 60px; height: 80vh; background: url('hero.jpg') center/cover no-repeat;
-      display: flex; align-items: center; justify-content: center; color: #fff;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.4); }
-    .hero h1 { font-size: 3rem; }
+      display: flex; align-items: center; justify-content: center; }
+    .hero img { width: 200px; height: auto; cursor: pointer; }
 
-    /* About 섹션 */
+    /* 나머지 섹션들은 동일 */
     .about { padding: 4rem 0; background: #f9f9f9; }
     .about .inner { display: flex; flex-wrap: wrap; align-items: center; gap: 2rem; }
     .about-text { flex: 1; min-width: 280px; }
     .about-photo { flex: 1; min-width: 280px; }
     .about-photo img { border-radius: 50%; }
 
-    /* Skills 섹션 */
     .skills { padding: 4rem 0; }
     .skills h2 { text-align: center; margin-bottom: 2rem; }
     .skills-list { display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; }
     .skills-list li { background: #e0e0e0; padding: 0.5rem 1rem; border-radius: 2rem; font-size: 0.9rem; }
 
-    /* Projects 섹션 */
     .projects { padding: 4rem 0; background: #f9f9f9; }
     .projects h2 { text-align: center; margin-bottom: 2rem; }
     .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; }
@@ -52,7 +49,6 @@
     .card-content p { font-size: 0.9rem; }
     .card-content a { display: inline-block; margin-top: 0.5rem; font-size: 0.9rem; color: #007bff; }
 
-    /* Contact 섹션 */
     .contact { padding: 4rem 0; }
     .contact h2 { text-align: center; margin-bottom: 2rem; }
     .contact-form { width: 100%; max-width: 500px; margin: 0 auto; }
@@ -61,7 +57,6 @@
     .contact-form button { width: 100%; padding: 0.75rem; border: none; background: #253551;
       color: #fff; font-size: 1rem; border-radius: 0.25rem; cursor: pointer; }
 
-    /* Footer */
     footer { background: #333; color: #fff; padding: 2rem 0; text-align: center; }
     footer small { display: block; margin-top: 1rem; font-size: 0.8rem; }
   </style>
@@ -70,7 +65,7 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">Your Name</div>
+        <div class="logo">원다영</div>
         <ul class="nav-links">
           <li><a href="#about">소개</a></li>
           <li><a href="#skills">기술</a></li>
@@ -82,7 +77,7 @@
   </header>
 
   <section class="hero">
-    <h1>Hello, I'm Your Name</h1>
+    <a href="#about"><img src="hero.jpg" alt="메인 배너 이미지"></a>
   </section>
 
   <section id="about" class="about">
@@ -142,7 +137,7 @@
 
   <footer>
     <div class="container">
-      &copy; 2025 Your Name. All Rights Reserved.
+      &copy; 2025 원다영. All Rights Reserved.
       <small>Built with ❤️</small>
     </div>
   </footer>
