포폴기말발표

--- a/myweb/project-logo.html
+++ b/myweb/project-logo.html
@@ -88,11 +88,11 @@
     <div class="image-wrapper">
       <img src="5.png" alt="로고 디자인 이미지">
     </div>
-    <p>브랜드의 핵심 철학을 시각적으로 풀어낸 로고 디자인입니다. 단순함 속에 직관성과 개성을 담아내기 위해 색상, 형태, 여백의 조화를 세심하게 설계했습니다. 브랜드 인식도를 높이는 데 중점을 두었으며, 다양한 매체에서 시각적으로 조화롭고 일관성 있게 적용될 수 있도록 유연한 구조를 설계하였습니다. 기본적인 워드마크 타입에서부터 응용 가능한 아이콘 버전까지 함께 구성하여 활용성을 극대화했습니다.</p>
+    <p>브랜드의 핵심 철학을 시각적으로 풀어낸 로고 디자인입니다. 단순함 속에 직관성과 개성을 담아내기 위해 색상, 형태, 여백의 조화를 세심하게 설계했습니다. 브랜드 인식도를 높이는 데 중점을 두었습니다.</p>
     <div class="info-box">
       • 사용 툴: Adobe Illustrator, Photoshop<br>
       • 담당 역할: 디자인 기획, 로고 시안 제작 및 완성<br>
-      • 핵심 포인트: 심플한 형태 + 명확한 의미 부여 + 다양한 매체 적용 고려
+      • 핵심 포인트: 심플한 형태 + 명확한 의미 부여
     </div>
     <a href="portfolio.html" class="button">← 포트폴리오 메인으로 돌아가기</a>
   </div>
