--- a/myweb/portfolio.html
+++ b/myweb/portfolio.html
@@ -112,7 +112,7 @@
       margin: 3rem auto 0;
       text-align: center;
     }
-    .about h2, .abilities h2, .projects h2, .contact h2 {
+    .about h2, .abilities h2, .projects h2 {
       text-align: center;
       font-size: 2rem;
       margin-bottom: 2rem;
@@ -142,12 +142,44 @@
       color: #fff;
     }
 
-    .projects .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 1.5rem;
+    .carousel-wrapper {
+      position: relative;
     }
+    .projects-carousel {
+      display: flex;
+      overflow-x: auto;
+      scroll-behavior: smooth;
+      gap: 1rem;
+      padding-bottom: 1rem;
+    }
+    .projects-carousel::-webkit-scrollbar {
+      height: 8px;
+    }
+    .projects-carousel::-webkit-scrollbar-thumb {
+      background: var(--secondary-color);
+      border-radius: 4px;
+    }
+    .prev-btn, .next-btn {
+      position: absolute;
+      top: 40%;
+      transform: translateY(-50%);
+      background-color: var(--primary-color);
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      font-size: 1.5rem;
+      cursor: pointer;
+      z-index: 10;
+      border-radius: 6px;
+    }
+    .prev-btn:hover, .next-btn:hover {
+      background-color: var(--secondary-color);
+    }
+    .prev-btn { left: -10px; }
+    .next-btn { right: -10px; }
+
     .card {
+      min-width: 280px;
       background: #fff;
       border-radius: 0.75rem;
       overflow: hidden;
@@ -175,33 +207,6 @@
       color: #555;
     }
 
-    .contact-form {
-      max-width: 500px;
-      margin: 0 auto;
-    }
-    .contact-form input, .contact-form textarea {
-      width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-      border: 2px solid var(--secondary-color);
-      border-radius: 0.5rem;
-      background: #fff;
-    }
-    .contact-form button {
-      width: 100%;
-      padding: 0.75rem;
-      background: var(--secondary-color);
-      color: #fff;
-      border: none;
-      font-weight: 600;
-      font-size: 1rem;
-      border-radius: 0.5rem;
-      cursor: pointer;
-    }
-    .contact-form button:hover {
-      background: var(--primary-color);
-    }
-
     footer {
       background: var(--primary-color);
       color: #fff;
@@ -224,7 +229,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="#abilities">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -257,33 +262,81 @@
   <section id="projects" class="projects">
     <div class="container">
       <h2>Projects</h2>
-      <div class="grid">
-        <div class="card"><img src="5.png" alt=""><div class="card-content"><h3>로고 디자인</h3><p>콘텐츠 철학을 담은 심플하고 직관적인 로고 디자인입니다.</p></div></div>
-        <div class="card"><img src="2.jpg" alt=""><div class="card-content"><h3>일러스트 캐릭터 드로잉</h3><p>강렬한 배경과 감정을 활용한 인물화입니다.</p></div></div>
-        <div class="card"><img src="포폴 어플-21.jpg" alt=""><div class="card-content"><h3>앱 콘텐츠 디자인</h3><p>업사이클링 중심 앱의 UI 및 콘텐츠 구성입니다.</p></div></div>
-        <div class="card"><img src="로고 캐디 아웃박스 수정_대지 1-02.jpg" alt=""><div class="card-content"><h3>캐릭터 디자인</h3><p>제품 성격을 살린 아웃박스 일러스트입니다.</p></div></div>
-      </div>
-    </div>
-  </section>
+      <div class="carousel-wrapper">
+        <button class="prev-btn" aria-label="이전">&lt;</button>
+        <div class="projects-carousel" id="carousel">
 
-  <section id="contact" class="contact">
-    <div class="container">
-      <h2>Contact</h2>
-      <form class="contact-form">
-        <input type="text" name="name" placeholder="Name" required />
-        <input type="email" name="email" placeholder="Email" required />
-        <textarea name="message" rows="5" placeholder="Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
+          <a href="project-logo.html" class="card">
+            <img src="5.png" alt="로고 디자인 썸네일">
+            <div class="card-content">
+              <h3>로고 디자인</h3>
+              <p>콘텐츠 철학을 담은 심플하고 직관적인 로고 디자인입니다.</p>
+            </div>
+          </a>
+
+          <a href="project-illustration.html" class="card">
+            <img src="2.jpg" alt="일러스트 캐릭터 썸네일">
+            <div class="card-content">
+              <h3>일러스트 캐릭터 드로잉</h3>
+              <p>강렬한 배경과 감정을 활용한 인물화입니다.</p>
+            </div>
+          </a>
+
+          <a href="project-appcontent.html" class="card">
+            <img src="포폴 어플-21.jpg" alt="앱 콘텐츠 썸네일">
+            <div class="card-content">
+              <h3>앱 콘텐츠 디자인</h3>
+              <p>업사이클링 중심 앱의 UI 및 콘텐츠 구성입니다.</p>
+            </div>
+          </a>
+
+          <a href="project-character.html" class="card">
+            <img src="로고 캐디 아웃박스 수정_대지 1-02.jpg" alt="캐릭터 디자인 썸네일">
+            <div class="card-content">
+              <h3>캐릭터 디자인</h3>
+              <p>제품 성격을 살린 아웃박스 일러스트입니다.</p>
+            </div>
+          </a>
+
+          <a href="project-branding.html" class="card">
+            <img src="extra1.png" alt="브랜딩 디자인 썸네일">
+            <div class="card-content">
+              <h3>브랜딩 디자인</h3>
+              <p>B급 농산물 일러스트를 활용한 시각적 브랜딩 사례입니다.</p>
+            </div>
+          </a>
+
+          <a href="project-print.html" class="card">
+            <img src="extra2.png" alt="인쇄물 디자인 썸네일">
+            <div class="card-content">
+              <h3>인쇄물 디자인</h3>
+              <p>경제 교육 콘텐츠에 맞춘 캐릭터 일러스트 시리즈입니다.</p>
+            </div>
+          </a>
+
+        </div>
+        <button class="next-btn" aria-label="다음">&gt;</button>
+      </div>
     </div>
   </section>
 
   <footer>
     <div class="container">
       © 2025 원다영. All Rights Reserved.
-      <small>Built with ❤️</small>
+    
     </div>
   </footer>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const carousel = document.getElementById('carousel');
+      document.querySelector('.prev-btn').addEventListener('click', () => {
+        carousel.scrollBy({ left: -300, behavior: 'smooth' });
+      });
+      document.querySelector('.next-btn').addEventListener('click', () => {
+        carousel.scrollBy({ left: 300, behavior: 'smooth' });
+      });
+    });
+  </script>
 </body>
 </html>
-
