--- a/myweb/project-illustration.html
+++ b/myweb/project-illustration.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>로고 디자인 | 원다영 포트폴리오</title>
+  <title>일러스트 캐릭터 드로잉 | 원다영 포트폴리오</title>
   <style>
     :root {
       --primary: #2c5f2d;
@@ -84,15 +84,16 @@
 </head>
 <body>
   <div class="container">
-    <h1>로고 디자인</h1>
+    <h1>일러스트 캐릭터 드로잉</h1>
     <div class="image-wrapper">
-      <img src="5.png" alt="로고 디자인 이미지">
+      <img src="2.jpg" alt="일러스트 캐릭터 이미지">
     </div>
-    <p>브랜드의 핵심 철학을 시각적으로 풀어낸 로고 디자인입니다. 단순함 속에 직관성과 개성을 담아내기 위해 색상, 형태, 여백의 조화를 세심하게 설계했습니다. 브랜드 인식도를 높이는 데 중점을 두었으며, 다양한 매체에서 시각적으로 조화롭고 일관성 있게 적용될 수 있도록 유연한 구조를 설계하였습니다. 기본적인 워드마크 타입에서부터 응용 가능한 아이콘 버전까지 함께 구성하여 활용성을 극대화했습니다.</p>
+    <p>강렬한 배경과 감정을 담아낸 인물 일러스트입니다. 감정선을 강조하는 구도와 색채 구성을 통해 몰입감을 유도했습니다. 인물의 표정, 자세, 배경의 요소 하나하나에 집중하며 감정의 결을 섬세하게 표현하고자 했습니다.</p>
     <div class="info-box">
-      • 사용 툴: Adobe Illustrator, Photoshop<br>
-      • 담당 역할: 디자인 기획, 로고 시안 제작 및 완성<br>
-      • 핵심 포인트: 심플한 형태 + 명확한 의미 부여 + 다양한 매체 적용 고려
+      • 사용 툴: Adobe Photoshop, Clip Studio Paint<br>
+      • 제작 의도: 감정선이 선명하게 드러나는 콘셉트 일러스트<br>
+      • 작업 범위: 스케치, 채색, 후보정 및 구성 연출 전반<br>
+      • 주요 표현 요소: 붉은색 계열의 대비와 그림자 표현으로 드라마틱한 분위기 조성
     </div>
     <a href="portfolio.html" class="button">← 포트폴리오 메인으로 돌아가기</a>
   </div>
