--- a/myweb/project-print.html
+++ b/myweb/project-print.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>로고 디자인 | 원다영 포트폴리오</title>
+  <title>인쇄물 디자인 | 원다영 포트폴리오</title>
   <style>
     :root {
       --primary: #2c5f2d;
@@ -84,15 +84,20 @@
 </head>
 <body>
   <div class="container">
-    <h1>로고 디자인</h1>
+    <h1>인쇄물 디자인</h1>
     <div class="image-wrapper">
-      <img src="5.png" alt="로고 디자인 이미지">
+      <img src="extra2.png" alt="인쇄물 디자인 캐릭터 이미지">
     </div>
-    <p>브랜드의 핵심 철학을 시각적으로 풀어낸 로고 디자인입니다. 단순함 속에 직관성과 개성을 담아내기 위해 색상, 형태, 여백의 조화를 세심하게 설계했습니다. 브랜드 인식도를 높이는 데 중점을 두었으며, 다양한 매체에서 시각적으로 조화롭고 일관성 있게 적용될 수 있도록 유연한 구조를 설계하였습니다. 기본적인 워드마크 타입에서부터 응용 가능한 아이콘 버전까지 함께 구성하여 활용성을 극대화했습니다.</p>
+    <p>
+      이 인쇄물 디자인 프로젝트는 브랜딩 일관성을 유지하며 효과적인 커뮤니케이션을 목표로 제작되었습니다. 
+      전단지, 리플렛, 포스터 등 다양한 출력 매체에 적용되는 디자인으로, 각 인쇄물은 메시지 전달력과 시각적 집중도를 최우선으로 고려했습니다.
+      타이포그래피, 색상 조합, 여백 구성 등 인쇄 특성을 반영한 디테일한 설계로 정보 전달력을 높이고, 사용자의 흥미를 유도합니다.
+      특히 브랜드의 핵심 메시지와 아이덴티티가 명확하게 드러나도록 기획하여, 실용성과 디자인 감각을 동시에 만족시키는 결과물을 도출했습니다.
+    </p>
     <div class="info-box">
-      • 사용 툴: Adobe Illustrator, Photoshop<br>
-      • 담당 역할: 디자인 기획, 로고 시안 제작 및 완성<br>
-      • 핵심 포인트: 심플한 형태 + 명확한 의미 부여 + 다양한 매체 적용 고려
+      • 디자인 범위: 포스터, 리플렛, 배너, 명함 등<br>
+      • 작업 도구: Adobe InDesign, Illustrator, Photoshop<br>
+      • 특징: 브랜드 정체성 유지, 시선 집중형 레이아웃 구성, 오프라인 출력 최적화
     </div>
     <a href="portfolio.html" class="button">← 포트폴리오 메인으로 돌아가기</a>
   </div>
