--- a/myweb/skill-design.html
+++ b/myweb/skill-design.html
@@ -28,7 +28,9 @@
     <h1>디자인</h1>
     <p>디자인은 단지 시각적인 요소를 예쁘게 만드는 것을 넘어, 콘텐츠에 생명력을 불어넣는 과정입니다. 저는 사용자의 시선을 끌고, 감성을 자극하며, 메시지를 명확하게 전달할 수 있는 디자인을 지향합니다.</p>
     <p>색감과 구성, 타이포그래피의 조화를 섬세하게 조율하며 브랜드에 어울리는 톤앤매너를 설계해왔습니다. 디지털 일러스트, UI 구성, 인쇄물 디자인까지 다양한 분야를 경험하며 균형감 있는 시각 표현을 익혔습니다.</p>
+    <!-- 버튼 -->
     <a href="portfolio.html" class="button">← 포트폴리오 메인으로 돌아가기</a>
+  </main>
   </div>
 </body>
 </html>
