--- a/myweb/skill-editing.html
+++ b/myweb/skill-editing.html
@@ -28,7 +28,9 @@
     <h1>편집</h1>
     <p>콘텐츠를 구성하고 다듬는 편집 과정은 작품의 완성도를 결정짓는 중요한 단계입니다. 저는 정보의 흐름을 고려해 메시지를 효과적으로 전달하는 편집을 추구합니다.</p>
     <p>인쇄물, 카드뉴스, 리플렛, 프레젠테이션 등 다양한 매체에서 시각적인 편집 구조를 구성하고, 브랜드와 목적에 맞는 내용 정리 및 배열을 진행해왔습니다. 말하고자 하는 바를 깔끔하고 간결하게 전달하는 편집이 저의 강점입니다.</p>
+    <!-- 버튼 -->
     <a href="portfolio.html" class="button">← 포트폴리오 메인으로 돌아가기</a>
+  </main>
   </div>
 </body>
 </html>
