--- a/myweb/skill-planning.html
+++ b/myweb/skill-planning.html
@@ -28,7 +28,9 @@
     <h1>기획</h1>
     <p>저는 디자인의 시작은 '기획'에서 출발한다고 믿습니다. 사용자의 니즈를 분석하고, 콘텐츠의 핵심 메시지를 명확히 정의한 후, 감각적인 흐름으로 설계도를 구상합니다. 기획 과정에서는 '왜'라는 질문을 끊임없이 던지며, 문제를 발견하고 해결하는 사고의 구조를 세우는 데 집중합니다.</p>
     <p>실제 프로젝트에서 저는 타겟 설정, 콘텐츠 구조 설계, 사용자 여정 맵 작성 등을 통해 완성도 높은 결과물을 도출해왔습니다. 이 과정에서 팀워크와 커뮤니케이션의 중요성을 늘 우선시하며 협업을 이끌었습니다.</p>
+    <!-- 버튼 -->
     <a href="portfolio.html" class="button">← 포트폴리오 메인으로 돌아가기</a>
+  </main>
   </div>
 </body>
 </html>
