포폴기말발표

--- a/myweb/contact.html
+++ b/myweb/contact.html
@@ -66,9 +66,9 @@
   <main>
     <h2>원다영 연락처</h2>
     <div class="info-box">
-      <p><strong>이메일:</strong> <a href="mailto:evuxzi@gmail.com">evuxzi@gmail.com</a></p>
-      <p><strong>전화번호:</strong> 010-3029-1298</p>
-      <p><strong>인스타그램:</strong> <a href="https://instagram.com/ecjiosjd" target="_blank">@ecjiosjd</a></p>
+      <p><strong>이메일:</strong> <a href="mailto:evixixixi@gmail.com">evixixixi@gmail.com</a></p>
+      <p><strong>전화번호:</strong> 010-4047-5935</p>
+      <p><strong>인스타그램:</strong> <a href="https://instagram.com/tkxkdsusu" target="_blank">@tkxksusu</a></p>
     </div>
     <a href="portfolio.html" class="button">← 메인으로 돌아가기</a>
   </main>
