--- a/myweb/skill-coding.html
+++ b/myweb/skill-coding.html
@@ -1,99 +1,79 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>로고 디자인 | 원다영 포트폴리오</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>코딩 | 원다영 포트폴리오</title>
   <style>
-    :root {
-      --primary: #2c5f2d;
-      --accent: #4c9a2a;
-      --bg: #f8fdf8;
-      --text: #1b3a2d;
-    }
-
     body {
       font-family: 'Noto Sans KR', sans-serif;
-      background: var(--bg);
-      color: var(--text);
+      background: #f0f7f4;
+      color: #1b3a2d;
+      line-height: 1.8;
       margin: 0;
-      padding: 0;
     }
 
     .container {
-      max-width: 960px;
+      max-width: 800px;
       margin: 4rem auto;
       padding: 2rem;
       background: white;
-      border-radius: 1rem;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
     }
 
     h1 {
-      font-size: 2.2rem;
-      color: var(--primary);
+      color: #2c5f2d;
+      font-size: 2.5rem;
       margin-bottom: 1rem;
     }
 
-    .image-wrapper {
-      margin-bottom: 2rem;
-      overflow: hidden;
-      border-radius: 0.75rem;
-    }
-
-    .image-wrapper img {
-      width: 100%;
-      transition: transform 0.4s ease;
-    }
-
-    .image-wrapper img:hover {
-      transform: scale(1.02);
-    }
-
     p {
-      font-size: 1.05rem;
+      font-size: 1rem;
+      margin-bottom: 1.2rem;
+    }
+
+    ul {
+      padding-left: 1.5rem;
       margin-bottom: 1.5rem;
-      line-height: 1.7;
     }
 
-    .info-box {
-      background: #e1f0e9;
-      padding: 1rem 1.25rem;
-      border-left: 4px solid var(--accent);
-      border-radius: 0.5rem;
-      font-size: 0.95rem;
-      color: #333;
+    li {
+      margin-bottom: 0.6rem;
     }
 
-    .button {
+    a.button {
       display: inline-block;
-      margin-top: 2.5rem;
+      margin-top: 2rem;
       padding: 0.75rem 1.5rem;
-      background: var(--accent);
+      background: #2c5f2d;
       color: white;
-      font-weight: 600;
-      border-radius: 0.5rem;
+      border-radius: 6px;
       text-decoration: none;
+      font-weight: bold;
       transition: background 0.3s;
     }
 
-    .button:hover {
-      background: var(--primary);
+    a.button:hover {
+      background: #4c9a2a;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>로고 디자인</h1>
-    <div class="image-wrapper">
-      <img src="5.png" alt="로고 디자인 이미지">
-    </div>
-    <p>브랜드의 핵심 철학을 시각적으로 풀어낸 로고 디자인입니다. 단순함 속에 직관성과 개성을 담아내기 위해 색상, 형태, 여백의 조화를 세심하게 설계했습니다. 브랜드 인식도를 높이는 데 중점을 두었으며, 다양한 매체에서 시각적으로 조화롭고 일관성 있게 적용될 수 있도록 유연한 구조를 설계하였습니다. 기본적인 워드마크 타입에서부터 응용 가능한 아이콘 버전까지 함께 구성하여 활용성을 극대화했습니다.</p>
-    <div class="info-box">
-      • 사용 툴: Adobe Illustrator, Photoshop<br>
-      • 담당 역할: 디자인 기획, 로고 시안 제작 및 완성<br>
-      • 핵심 포인트: 심플한 형태 + 명확한 의미 부여 + 다양한 매체 적용 고려
-    </div>
+    <h1>코딩</h1>
+    <p>코딩은 기능을 구현하는 것을 넘어, 사용자 경험과 목적을 명확히 반영하는 설계의 연장선이라고 생각합니다. 저는 디자인 감각을 바탕으로 직관적이고 일관된 UI/UX를 구현하며, 프론트엔드 영역을 중심으로 다양한 프로젝트를 경험해왔습니다.</p>
+    
+    <p><strong>사용 기술 및 스킬셋:</strong></p>
+    <ul>
+      <li><strong>HTML/CSS</strong> – 반응형 웹페이지 및 포트폴리오 사이트 구축 경험</li>
+      <li><strong>JavaScript</strong> – 기본적인 DOM 조작, 이벤트 처리, 슬라이드/인터랙션 구현</li>
+      <li><strong>Bootstrap</strong> – 효율적인 레이아웃 설계와 디자인 시스템 활용</li>
+      <li><strong>Figma → 코드 전환</strong> – 디자인 시안에 맞춘 정확한 구현 경험</li>
+    </ul>
+
+    <p>작업물은 사용자의 흐름을 고려한 구조적 마크업을 지향하며, 유지보수가 쉬운 깔끔한 코드 작성을 중시합니다. 또한 디자인 감성을 살린 애니메이션과 전환 효과로 사용자 경험을 풍부하게 만듭니다.</p>
+
     <a href="portfolio.html" class="button">← 포트폴리오 메인으로 돌아가기</a>
   </div>
 </body>
