--- a/myweb/about.html
+++ b/myweb/about.html
@@ -13,7 +13,11 @@
       --white: #ffffff;
     }
 
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
     body {
       font-family: 'Noto Sans KR', sans-serif;
@@ -26,8 +30,20 @@
       background: var(--primary-color);
       color: white;
       text-align: center;
-      padding: 3rem 1rem 2rem;
+      padding: 5rem 1rem 3rem;
       animation: fadeInDown 1s ease-out;
+    }
+
+    .profile-img {
+      width: 130px;
+      height: 130px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 4px solid var(--white);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      background: var(--white);
+      margin: 0 auto 1.5rem;
+      display: block;
     }
 
     header h1 {
@@ -113,11 +129,16 @@
       section h2 {
         font-size: 1.3rem;
       }
+      .profile-img {
+        width: 100px;
+        height: 100px;
+      }
     }
   </style>
 </head>
 <body>
   <header>
+    <img src="프로필.jpg" alt="프로필 이미지" class="profile-img" />
     <h1>About Me</h1>
     <p>감성을 시각으로 풀어내는 콘텐츠 디자이너 원다영</p>
   </header>
