--- a/myweb/contact.html
+++ b/myweb/contact.html
@@ -139,8 +139,7 @@
       <p><strong>이메일:</strong> <a href="mailto:evixixixi@gmail.com">evixixixi@gmail.com</a></p>
       <p><strong>전화번호:</strong> 010-4047-5935</p>
       <p><strong>인스타그램:</strong> <a href="https://instagram.com/tkxkdsusu" target="_blank">@tkxkdsusu</a></p>
-    </div>
-
+    </div
     <h2>연락 폼</h2>
     <form action="mailto:evixixixi@gmail.com" method="POST" enctype="text/plain">
       <input type="text" name="name" placeholder="이름" required>
