포폴기말발표

--- a/myweb/contact.html
+++ b/myweb/contact.html
@@ -139,7 +139,8 @@
       <p><strong>이메일:</strong> <a href="mailto:evixixixi@gmail.com">evixixixi@gmail.com</a></p>
       <p><strong>전화번호:</strong> 010-4047-5935</p>
       <p><strong>인스타그램:</strong> <a href="https://instagram.com/tkxkdsusu" target="_blank">@tkxkdsusu</a></p>
-    </div
+    </div> <!-- 이 닫힘 태그가 누락되었었음 -->
+
     <h2>연락 폼</h2>
     <form action="mailto:evixixixi@gmail.com" method="POST" enctype="text/plain">
       <input type="text" name="name" placeholder="이름" required>
