--- a/myweb/contact.html
+++ b/myweb/contact.html
@@ -2,8 +2,12 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Contact | 원다영 포트폴리오</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 구글 폰트 추가 -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+
   <style>
     :root {
       --primary-color: #2c5f2d;
@@ -133,16 +137,16 @@
   <header>
     <h1>Contact</h1>
   </header>
+
   <main>
     <h2>원다영 연락처</h2>
     <div class="info-box">
       <p><strong>이메일:</strong> <a href="mailto:evixixixi@gmail.com">evixixixi@gmail.com</a></p>
       <p><strong>전화번호:</strong> 010-4047-5935</p>
       <p><strong>인스타그램:</strong> <a href="https://instagram.com/tkxkdsusu" target="_blank">@tkxkdsusu</a></p>
-    </div> <!-- 이 닫힘 태그가 누락되었었음 -->
+    </div>
 
     <h2>연락 폼</h2>
-    
     <form action="mailto:evixixixi@gmail.com" method="POST" enctype="text/plain">
       <input type="text" name="name" placeholder="이름" required>
       <input type="email" name="email" placeholder="이메일 주소" required>
