--- a/myweb/contact.html
+++ b/myweb/contact.html
@@ -6,8 +6,7 @@
   <title>Contact | 원다영 포트폴리오</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- 구글 폰트 추가 -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     :root {
       --primary-color: #2c5f2d;
@@ -15,9 +14,12 @@
       --bg-light: #f0f7f4;
       --text-dark: #1b3a2d;
       --white: #ffffff;
+      --accent-light: #e1f0e9;
     }
 
     * {
+      margin: 0;
+      padding: 0;
       box-sizing: border-box;
     }
 
@@ -25,44 +27,55 @@
       font-family: 'Noto Sans KR', sans-serif;
       background: var(--bg-light);
       color: var(--text-dark);
-      margin: 0;
-      padding: 0;
+      line-height: 1.6;
     }
 
     header {
-      background: var(--primary-color);
-      color: white;
-      padding: 2rem 1rem;
+      background-color: var(--primary-color);
+      color: var(--white);
+      padding: 2.5rem 1rem;
       text-align: center;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+
+    header h1 {
+      font-size: 2.2rem;
+      font-weight: 700;
     }
 
     main {
       max-width: 800px;
       margin: 3rem auto;
-      padding: 2rem;
-      background: var(--white);
-      border-radius: 1rem;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      padding: 2.5rem;
+      background-color: var(--white);
+      border-radius: 1.2rem;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
     }
 
     h2 {
-      font-size: 2rem;
+      font-size: 1.75rem;
+      font-weight: 700;
       color: var(--primary-color);
-      margin-bottom: 1rem;
+      margin-bottom: 1.2rem;
     }
 
     .info-box {
-      background: #e1f0e9;
+      background-color: var(--accent-light);
       padding: 1.5rem;
-      border-left: 5px solid var(--secondary-color);
-      border-radius: 0.5rem;
-      font-size: 1rem;
+      border-left: 6px solid var(--secondary-color);
+      border-radius: 0.8rem;
       margin-bottom: 3rem;
+      font-size: 1.05rem;
+    }
+
+    .info-box p {
+      margin-bottom: 0.5rem;
     }
 
     .info-box a {
       color: var(--primary-color);
       text-decoration: none;
+      font-weight: 500;
     }
 
     .info-box a:hover {
@@ -76,12 +89,12 @@
     }
 
     input, textarea {
-      padding: 0.75rem;
-      border: 1px solid #ccc;
-      border-radius: 0.5rem;
-      font-size: 1rem;
       font-family: 'Noto Sans KR', sans-serif;
-      transition: border 0.3s;
+      padding: 1rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 0.6rem;
+      transition: border-color 0.3s ease;
     }
 
     input:focus, textarea:focus {
@@ -91,44 +104,61 @@
 
     textarea {
       resize: vertical;
-      min-height: 150px;
+      min-height: 160px;
     }
 
     button {
-      background: var(--primary-color);
-      color: white;
-      padding: 0.8rem 1.5rem;
-      font-size: 1rem;
-      font-weight: bold;
+      background-color: var(--primary-color);
+      color: var(--white);
       border: none;
-      border-radius: 0.5rem;
+      border-radius: 0.6rem;
+      padding: 0.9rem 1.5rem;
+      font-size: 1rem;
+      font-weight: 600;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
-      background: var(--secondary-color);
+      background-color: var(--secondary-color);
     }
 
     a.button {
       display: inline-block;
       margin-top: 2rem;
+      text-align: center;
       background: var(--secondary-color);
-      color: white;
-      padding: 0.75rem 1.5rem;
+      color: var(--white);
+      padding: 0.9rem 1.5rem;
+      font-weight: 600;
+      border-radius: 0.6rem;
       text-decoration: none;
-      font-weight: bold;
-      border-radius: 0.5rem;
-      transition: background 0.3s ease;
+      transition: background-color 0.3s ease;
     }
 
     a.button:hover {
-      background: var(--primary-color);
+      background-color: var(--primary-color);
     }
 
     @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.75rem;
+      }
+
       h2 {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
+      }
+
+      .info-box, form {
+        font-size: 0.95rem;
+      }
+
+      input, textarea {
+        font-size: 0.95rem;
+      }
+
+      button, a.button {
+        font-size: 0.95rem;
       }
     }
   </style>
